--- a/AutoMall/ViewControllers/Upkeep/AutoCheckOrderPayModeVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckOrderPayModeVC.xib
@@ -11,8 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AutoCheckOrderPayModeVC">
             <connections>
+                <outlet property="baogaoBtn" destination="lEg-Ek-eob" id="2mc-Ff-ne2"/>
                 <outlet property="chepaiL" destination="XoA-e6-52Z" id="uuV-sH-9EK"/>
                 <outlet property="contentV" destination="W6z-qQ-xOl" id="c4A-dd-eNB"/>
+                <outlet property="fanganBtn" destination="C6M-CI-kNP" id="OXF-oV-i8r"/>
                 <outlet property="moneyL" destination="OjM-mT-7Jr" id="ggr-Lg-8DI"/>
                 <outlet property="orderNumberL" destination="DDH-1q-arJ" id="Ma5-4h-QZo"/>
                 <outlet property="ownerL" destination="mkz-0z-Ycs" id="RLP-zi-3Ym"/>
@@ -25,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W6z-qQ-xOl">
-                    <rect key="frame" x="0.0" y="64" width="375" height="90"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="130"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7a-Mp-L6w">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -80,7 +82,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HxK-mi-NW0">
-                            <rect key="frame" x="0.0" y="89" width="375" height="1"/>
+                            <rect key="frame" x="0.0" y="129" width="375" height="1"/>
                             <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="KBe-Ql-cAq" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -89,6 +91,34 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-Ek-eob">
+                            <rect key="frame" x="8" y="87.5" width="90" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="Jnl-jq-Z0t"/>
+                                <constraint firstAttribute="width" constant="90" id="ohm-ao-gv1"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="检查报告">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="baogaoAction:" destination="-1" eventType="touchUpInside" id="F2p-wj-li5"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C6M-CI-kNP">
+                            <rect key="frame" x="108" y="87" width="90" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="5j9-oh-ydg"/>
+                                <constraint firstAttribute="width" constant="90" id="d6V-ne-YoD"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="服务方案">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="fanganAction:" destination="-1" eventType="touchUpInside" id="ofs-bs-LhH"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -96,19 +126,23 @@
                         <constraint firstItem="mkz-0z-Ycs" firstAttribute="leading" secondItem="Tp4-YO-plA" secondAttribute="trailing" id="2qh-db-JwY"/>
                         <constraint firstItem="XoA-e6-52Z" firstAttribute="centerY" secondItem="7k0-jc-w0m" secondAttribute="centerY" id="4gM-jD-8IJ"/>
                         <constraint firstItem="Tp4-YO-plA" firstAttribute="top" secondItem="7k0-jc-w0m" secondAttribute="bottom" constant="8" id="5XR-3Y-VAb"/>
+                        <constraint firstItem="C6M-CI-kNP" firstAttribute="centerY" secondItem="lEg-Ek-eob" secondAttribute="centerY" id="766-0W-yWM"/>
                         <constraint firstItem="7k0-jc-w0m" firstAttribute="leading" secondItem="W6z-qQ-xOl" secondAttribute="leading" constant="8" id="7Ax-0r-IC8"/>
                         <constraint firstItem="HxK-mi-NW0" firstAttribute="leading" secondItem="W6z-qQ-xOl" secondAttribute="leading" id="7SR-Ku-oY3"/>
                         <constraint firstItem="OjM-mT-7Jr" firstAttribute="centerY" secondItem="BT2-5b-PJu" secondAttribute="centerY" id="DGL-PS-ycz"/>
                         <constraint firstItem="DDH-1q-arJ" firstAttribute="centerY" secondItem="BT2-5b-PJu" secondAttribute="centerY" id="EmN-9R-IQm"/>
                         <constraint firstItem="DDH-1q-arJ" firstAttribute="leading" secondItem="BT2-5b-PJu" secondAttribute="trailing" id="GtC-If-tKi"/>
-                        <constraint firstAttribute="height" constant="90" id="HKq-bH-Jb1"/>
+                        <constraint firstAttribute="height" constant="130" id="HKq-bH-Jb1"/>
                         <constraint firstAttribute="trailing" secondItem="c7a-Mp-L6w" secondAttribute="trailing" id="LY5-x3-5bQ"/>
                         <constraint firstItem="BT2-5b-PJu" firstAttribute="top" secondItem="W6z-qQ-xOl" secondAttribute="top" constant="8" id="N8l-kZ-pau"/>
                         <constraint firstItem="Tp4-YO-plA" firstAttribute="leading" secondItem="W6z-qQ-xOl" secondAttribute="leading" constant="8" id="NyC-nK-J33"/>
+                        <constraint firstItem="C6M-CI-kNP" firstAttribute="leading" secondItem="lEg-Ek-eob" secondAttribute="trailing" constant="10" id="P6N-xn-RHb"/>
                         <constraint firstItem="XoA-e6-52Z" firstAttribute="leading" secondItem="7k0-jc-w0m" secondAttribute="trailing" id="SjY-bs-89N"/>
                         <constraint firstAttribute="trailing" secondItem="HxK-mi-NW0" secondAttribute="trailing" id="TEJ-VD-JrA"/>
+                        <constraint firstItem="lEg-Ek-eob" firstAttribute="leading" secondItem="W6z-qQ-xOl" secondAttribute="leading" constant="8" id="Y4m-J8-lVD"/>
                         <constraint firstAttribute="bottom" secondItem="HxK-mi-NW0" secondAttribute="bottom" id="cRo-Vr-0tl"/>
                         <constraint firstAttribute="trailing" secondItem="OjM-mT-7Jr" secondAttribute="trailing" constant="8" id="ceO-ic-9tl"/>
+                        <constraint firstItem="lEg-Ek-eob" firstAttribute="top" secondItem="Tp4-YO-plA" secondAttribute="bottom" constant="10" id="dwe-pY-wAB"/>
                         <constraint firstItem="7k0-jc-w0m" firstAttribute="top" secondItem="BT2-5b-PJu" secondAttribute="bottom" constant="8" id="j7B-87-53v"/>
                         <constraint firstItem="c7a-Mp-L6w" firstAttribute="top" secondItem="W6z-qQ-xOl" secondAttribute="top" id="laR-zJ-rsc"/>
                         <constraint firstItem="BT2-5b-PJu" firstAttribute="leading" secondItem="W6z-qQ-xOl" secondAttribute="leading" constant="8" id="ok5-zu-sJv"/>
@@ -151,7 +185,7 @@
                 <constraint firstItem="SK7-tU-RFG" firstAttribute="width" secondItem="LyV-Bo-qPO" secondAttribute="width" id="ve3-CN-GuW"/>
                 <constraint firstItem="W6z-qQ-xOl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="wQL-qx-AIj"/>
             </constraints>
-            <point key="canvasLocation" x="-1192" y="18"/>
+            <point key="canvasLocation" x="-1128" y="-22"/>
         </view>
     </objects>
 </document>
