--- a/AutoMall/ViewControllers/PersonalCenter/CenterOrderCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CenterOrderCell.xib
@@ -50,8 +50,8 @@
                         <inset key="imageEdgeInsets" minX="20" minY="5" maxX="20" maxY="26"/>
                         <state key="normal" image="center_finished"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="检查完成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSp-WV-12j">
-                        <rect key="frame" x="18" y="45" width="49.5" height="14.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已检查" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSp-WV-12j">
+                        <rect key="frame" x="24.5" y="45" width="37" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
